Issue #18 - GET /media/id. Refactors for media upload
